--- a/web/app/themes/louie-dev/resources/assets/styles/common/_variables.scss
+++ b/web/app/themes/louie-dev/resources/assets/styles/common/_variables.scss
@@ -8,3 +8,10 @@ $theme-colors: (
 /** Bootstrap navbar fix (https://git.io/fADqW) */
 $navbar-dark-toggler-icon-bg: none;
 $navbar-light-toggler-icon-bg: none;
+
+$font-family-base: "EB Garamond", serif;
+$font-family-lead: "Muli", sans-serif;
+
+$body-bg: #f5f7fa;
+
+$link-color: #000;
