--- a/web/app/themes/louie-dev/resources/assets/styles/layouts/_pages.scss
+++ b/web/app/themes/louie-dev/resources/assets/styles/layouts/_pages.scss
@@ -13,3 +13,11 @@
 .page h2 {
   font-size: 4rem;
 }
+
+// home
+.home .content {
+  @extend .d-flex;
+  @extend .align-items-center;
+
+  height: 100%;
+}
