changed lead font to grotesque

--- a/web/app/themes/louie-dev/resources/assets/styles/common/_variables.scss
+++ b/web/app/themes/louie-dev/resources/assets/styles/common/_variables.scss
@@ -10,7 +10,8 @@ $navbar-dark-toggler-icon-bg: none;
 $navbar-light-toggler-icon-bg: none;
 
 $font-family-base: "EB Garamond", serif;
-$font-family-lead: "Muli", sans-serif;
+//$font-family-lead: "Muli", sans-serif;
+$font-family-lead: "Darker Grotesque", sans-serif;
 
 $body-bg: #f5f7fa;
 
