updated dev diaries and started viewports layout

--- a/web/app/themes/louie-dev/resources/assets/styles/common/_global.scss
+++ b/web/app/themes/louie-dev/resources/assets/styles/common/_global.scss
@@ -29,3 +29,14 @@ body {
 .link-underline {
   text-decoration: underline;
 }
+
+.main-sub {
+  margin-top: 5rem;
+  font-size: 1rem;
+  font-style: italic;
+}
+
+.main-title {
+  font-size: 4rem;
+  text-transform: lowercase;
+}
